<resources>
    <string name="app_name">SeizeWatch</string>
    <string name="changelog">
        "\n
        \nV4.3.1 - Fixed user interface issues on Android-15 and Android-16
        \nV4.3.0  - Added support for Android 15 (API 35) and above.
        \n        - Simplified data sharing editor by grouping events for editing.
        \nV4.2.12 - Added buttons and menu items for 'Help' and 'Troubleshooting' to point users to the web page instructions.
        \nV4.2   - Added support for PineTime and BangleJS Watches using Bluetooth data source.
        \n       - Added support for Version 2 of the Garmin watch app, which reduces battery drain
        \n       - Added new, swipeable user interface to simplify the main screen.
        \n       - various bug fixes and stability improvements
          "</string>
    <string name="UpgradeMsg">
        Please enable the new &lt;b>Data Sharing&lt;/b> feature to help improve OpenSeizureDetector!&lt;br/>
                (see below for details)&lt;br/>&lt;br/>

        Please subscribe to updates at &lt;b>www.openseizuredetector.org.uk&lt;/b>
        so we can inform you of any issues.
&lt;br/>&lt;br/>
        &lt;b>Changes in this version:&lt;/b>&lt;br/>
    </string>
    <string name="FirstRunDlgMsg">
        For details of how OpenSeizure Detector collects and uses
        your personal data, please refer to the &lt;b>Privacy Policy below&lt;/b>.&lt;br/>&lt;br/>

        Please enable &lt;b>Data Sharing&lt;/b> to help improve OpenSeizureDetector!&lt;br/>
                (see below for details)&lt;br/>&lt;br/>

        Please subscribe to updates at &lt;b>www.openseizuredetector.org.uk&lt;/b>
        so we can inform you of any issues.
    </string>
    <string name="ask_for_error_log">Sorry, OpenSeizureDetector Has Crashed.  Please Email this log file to us so we can work out what happened and fix it.\nThanks, Graham.</string>
    <string name="email_welcome_note">Dear OpenSeizureDetector,\n\nApplication is just crashed, please check following error log for more details.\n\n\n</string>
    <string name="copyright_info">OpenSeizureDetector (Using UCE Handler\nCopyright © 2018 Rohit Sahebrao Surwase.)</string>
    <string name="okBtnTxt">OK</string>
    <string name="closeBtnTxt">Close</string>
    <string name="UpdateDialogTitleTxt">Thank you for Updating OpenSeizureDetector</string>
    <string name="FirstRunDlgTitle">Welcome to OpenSeizureDetector</string>
    <string name="SmsPermissionWarning">Problem with SMS Permissions\n(please check phone settings -> Apps -> OpenSeizureDetector -> Permissions</string>
    <string name="AppPermissionsOk">App Permissions OK</string>
    <string name="AppPermissionsWarning">Problem with App Permissions</string>
    <string name="BoundToServiceOk">Bound to Service OK</string>
    <string name="BindingToService">Binding to Background Service...</string>
    <string name="WatchConnectedOk">Watch Connected OK</string>
    <string name="WatchNotConnected">Watch Not Connected</string>
    <string name="SeizureDetectorDataReceived">Seizure Detector Data Received OK</string>
    <string name="WaitingForSeizureDetectorData">Waiting for Seizure Detector Data...</string>
    <string name="SeizureDetectorSettingsReceived">Seizure Detector Settings Received OK</string>
    <string name="WaitingForSeizureDetectorSettings">Waiting for Seizure Detector Settings...</string>
    <string name="DataSource">DataSource</string>
    <string name="AppTitleText">SeizeWatch Android App Version </string>
    <string name="ServerRunningOK">Server Running OK</string>
    <string name="AccessServerAt">Access Server at </string>
    <string name="ServerStopped">Server Stopped</string>
    <string name="Warning">WARNING</string>
    <string name="Mute">MUTE</string>
    <string name="Alarm">**ALARM**</string>
    <string name="Fall">**FALL**</string>
    <string name="HR_Equals">HR = </string>
    <string name="HRAlarmOff">HR Alarm OFF</string>
    <string name="WatchAppOK">Watch App OK</string>
    <string name="WatchAppNotRunning">Watch App NOT Running</string>
    <string name="WatchBatteryEquals">Batteries = </string>
    <string name="PowerEquals">Power = </string>
    <string name="SpectrumRatioEquals">Spectrum Ratio = </string>
    <string name="Threshold">threshold</string>
    <string name="NetFault">NET FAULT</string>
    <string name="WatchApp">Watch App -----</string>
    <string name="Dashes">------</string>
    <string name="SMSWillBeSentIn">SMS Will Be Sent in </string>
    <string name="Cancel">CANCEL?</string>
    <string name="AcceptAlarm">Accept Alarm</string>
    <string name="AudibleAlarmsCancelledFor">Muted for </string>
    <string name="PressToReEnable"> Restore</string>
    <string name="CancelAudibleAlarms">Mute Alarms</string>
    <string name="AudibleAlarmsOff">Audible Alarms OFF</string>
    <string name="Fault">FAULT</string>
    <string name="authenticate">Log In</string>
    <string name="not_authenticated">Not Logged In</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="AdvancedModeTitle">Advanced Mode</string>
    <string name="AdvancedModeSummary">Enable Advanced Settings (exposes a lot more things you can change....)</string>
    <string name="AutoStartTitle">Auto Start</string>
    <string name="AutoStartSummary">Auto start OpenSeizureDetector when phone is started</string>
    <string name="DataSourceTitle">Select Data Source</string>
    <string name="DataSourceSummary">Select whether to use a Garmin Watch, Pebble Watch or network connection as the seizure detector data source.</string>
    <string name="LogRemoteTitle">Log Data Remotely</string>
    <string name="LogRemoteSummary">Log Data to Central OpenSeizureDetector Database</string>
    <string name="UseMobileTitle">Use Mobile Internet</string>
    <string name="UseMobileSummary">Use mobile internet to log remote data</string>
    <string name="SeizureDetectorSettingsTitle">Seizure Detector Settings</string>
    <string name="AlarmThreshTitle">Alarm Threshold</string>
    <string name="AlarmThreshSummary">Alarm Threshold (Default = 100)</string>
    <string name="AlarmRatioThreshTitle">Alarm Ratio Threshold</string>
    <string name="AlarmRatioThreshSummary">Alarm Ratio Threshold (Default = 57). Increase to reduce sensitivity.</string>
    <string name="AlarmFreqMaxTitle">AlarmFreqMax (Hz)</string>
    <string name="AlarmFreqMaxSummary">Maximum Frequency of ROI (Hz) (Default = 8 Hz)</string>
    <string name="AlarmFreqMinTitle">AlarmFreqMin (Hz)</string>
    <string name="AlarmFreqMinSummary">Minimum Frequency of ROI (Hz) (Default = 3 Hz)</string>
    <string name="HRAlarmEnabledTitle">Enable Simple Heart Rate Alarm</string>
    <string name="HRAlarmEnabledSummary" />
    <string name="HRNullAlarmTitle">Treat a Null heart rate as an alarm condition</string>
    <string name="HRNullAlarmSummary" />
    <string name="HRThreshMinTitle">Heart Rate Min Threshold (bpm)</string>
    <string name="HRThreshMinSummary" />
    <string name="HRThreshMaxTitle">Heart Rate Max Threshold (bpm)</string>
    <string name="HRThreshMaxSummary" />
    <string name="BasicPrefTitle">Basic</string>
    <string name="BasicPrefSummary">Basic Preferences</string>
    <string name="accept_alarm">Accept Alarm</string>
    <string name="start_stop_server">Exit</string>
    <string name="install_watch_app">Install Watch App</string>
    <string name="test_alarm_beep">Test Alarm Beep</string>
    <string name="test_warning_beep">Test Warning Beep</string>
    <string name="test_sms_alarm_notification">Test SMS Alarm Notification</string>
    <string name="data_log_manager">Data Sharing</string>
    <string name="view_log_entries">View Log Entries</string>
    <string name="export_data">Export Data</string>
    <string name="settings">Settings</string>
    <string name="about">About...</string>
    <string name="about_text">OpenSeizureDetector epileptic\n
        (tonic-clonic) seizure detector and alarm
        system. Uses a Smart
        watch to detect the shaking
        associated with a seizure,
        then raises audible and text
        message (SMS) location alerts for carers.\n\n
        The system is free and open source - see
        openseizuredetector.org.uk for details.\n\n
        Please report any issues by raising an issue on the source code repository - https://github.com/OpenSeizureDetector/Android_Pebble_SD/issues
        or email graham@openseizuredetector.org.uk\n\n
        Android App and Garmin Watch App,
        copyright Graham Jones, 2015-2022.\n

         </string>
    <string name="credits_text"></string>
    <string name="edit_settings">Edit Settings</string>
    <string name="sms_location_alarm_active">SMS Location Alarm Active</string>
    <string name="sms_location_alarm_disabled">SMS Location Alarm Disabled</string>
    <string name="cancel_audible_not_sending_sms">Cancel Audible Active - not sending SMS</string>
    <string name="no_wifi_connection">Network State Changed - no Wifi Connection</string>
    <string name="no_active_network">Network State Changed - No Active Network</string>
    <string name="problem_parsing_preferences">Problem Parsing Preferences - Something won\'t work - Please go back to Settings and correct it!</string>
    <string name="send_sms_last_location">Send SMS - last location is </string>
    <string name="failed_to_send_sms">ERROR: FAILED TO SEND SMS MESSAGE</string>
    <string name="sms_alarms_disabled">SMS Alarms Disabled - not doing anything!</string>
    <string name="phone_alarm_disabled">Phone Alarm Disabled</string>
    <string name="test_phone_alarm_notification">Test Phone Alarm</string>
    <string name="DiallerNotInstalledWarning"><a href="https://github.com/OpenSeizureDetector/Dialler/tree/master/app/release/app-release.apk">OpenSeizureDetector Dialer App</a> Not installed - Required for Phone Call Alerts.</string>
    <string name="title_devices">BLE Devices</string>
    <string name="ble_not_supported">BLE Not Supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth Not Supported</string>
    <string name="menu_stop">STOP</string>
    <string name="menu_scan">SCAN</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="select_ble_device_title">Select BLE Device (for Buetooth Data Source Only)</string>
    <string name="select_ble_device_desc">Select Bluetooth Low Energy (BLE) Device to provide seizure (acceleration and heart rate) data) when using the Bluetooth Device data source.</string>
    <string name="basic_settings_title">Basic</string>
    <string name="basic_settings_summary">Basic Settings</string>
    <string name="general_settings_title">General</string>
    <string name="general_settings_summary">General Preferences</string>
    <string name="alarms_settings_title">Alarms</string>
    <string name="alarms_settings_summary">Alarms Preferences</string>
    <string name="seizure_detector_settings_title">Seizure Detector</string>
    <string name="StartingTitle">Starting......</string>
    <string name="report_seizure">Report Seizure</string>
    <string name="date">"Date: "</string>
    <string name="select_date">Select Date</string>
    <string name="time">"Time: "</string>
    <string name="cancelBtnTxt">Cancel</string>
    <string name="select_time">Select Time</string>
    <string name="event_type">Event Type</string>
    <string name="event_sub_type">Event Sub-Type</string>
</resources>